# fluence-quickstart-bounty

quickstart/4-hosted-character-count/: Readme.md
quickstart/4-hosted-character-count/browser_to_service/: package-lock.json
quickstart/4-hosted-character-count/browser_to_service/aqua/: character_count.aqua
quickstart/4-hosted-character-count/browser_to_service/src/: App.tsx
quickstart/4-hosted-character-count/browser_to_service/src/_aqua/: character_count.ts
quickstart/4-hosted-character-count/service_creation/: Cargo.toml
quickstart/4-hosted-character-count/service_creation/configs/: app_config_res.json
quickstart/4-hosted-character-count/service_creation/src/: main.rs
