[package]
name = "character-count"
version = "0.1.0"
authors = ["Fluence Labs", "gjsyme"]
description = "Character count string computation"
edition = "2018"
publish = false

[[bin]]
name = "character_count"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.6.11"

[dev-dependencies]
marine-rs-sdk-test = "0.2.0"
